@@ -68,7 +68,7 @@ ErmConfig.BOSS_BUILDING_HITPOINT = {10000000, 20000000, 32000000, 50000000, 9999
 ErmConfig.BOSS_MAX_SUPPORT_STRUCTURES = {15, 24, 30, 40, 50}
 ErmConfig.BOSS_SPAWN_SUPPORT_STRUCTURES = {5, 6, 7, 9, 12}
 -- 5 type of attacks based on damage taken
-ErmConfig.BOSS_DEFENSE_ATTACKS = {9999, 25000, 69420, 99999, 999999}
+ErmConfig.BOSS_DEFENSE_ATTACKS = {9999, 25000, 69420, 99999, 19999}
 -- Change phase every 15 Million HP
 ErmConfig.BOSS_PHASE_CHANGE = 15000000
 -- 96 width x up to 3000 length
